--- a/week02/styles/media-query-large.css
+++ b/week02/styles/media-query-large.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 500px){
+@media screen and (min-width: 32rem){
     header {
         color: white;
         background-color: black;
@@ -6,5 +6,6 @@
     }
     main{
         grid-template-columns: 1fr 1fr;
+        
     }
 }
