--- a/styles/filtered-temples-large.css
+++ b/styles/filtered-temples-large.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    max-width: 100%;
+    
 }
 
 body{
@@ -14,7 +16,7 @@ header{
     display: flex !important; 
     justify-content: space-between;
     align-items: center;  
-    width: auto; 
+    max-width: 100%; 
 }
 
 nav{
@@ -48,15 +50,34 @@ footer{
     background-color: #604ab1;
     padding: 10px;  
     text-align:center;   
-    margin: 0px;
+    margin: 0;
     color: white;    
     height: 70px;    
     font-weight: 20;    
+    width: 100%;
 }
 
+section{
+    background-color: rgba(211, 209, 209, 0.4);
+    padding: 10px;
+    
+}
 
+section img{
+    width: 80%;    
+    box-shadow: 4px 4px 15px 4px; 
+    margin-top: 15px;   
+}
 
-@media (min-width: 501px){
+section h3, p{
+    margin: 0;
+}
+
+section .label{
+    color: #391e9b;
+}
+
+@media (min-width: 651px){
     .menu-toggle{    
         display: flex !important;    
     }    
@@ -79,13 +100,11 @@ footer{
     #menu-toggle-checkbox{
         display: none;
     }
-    span{
-        display: none;
-    }
+   
 } 
 
-@media (min-width: 800px){
-    .container{
+@media (min-width: 800px) {
+    .container {
         grid-template-columns: auto auto auto;
     }
 }
