--- a/styles/form-large.css
+++ b/styles/form-large.css
@@ -34,6 +34,11 @@
      margin: 2%;
      margin-top: 4%;
     }
+
+    .confirmation-message{
+      text-align: center;
+      padding-bottom: 100px;
+    }
   
  /* use reverse flexbox to take advantage of flex-direction: reverse */
  .stars {
